--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,6 @@
 @import 'components/_artists-list.scss';
 @import 'components/_search-box.scss';
 
+@import '/layout/_header.scss';
+
 @import 'pages/_home.scss'
