--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet'); //todo move to typography
 
+//todo remove??
 // @font-face {
 //   font-family: 'Dancing Script', cursive;
 //   src: url('../abstracts/dancing-script/DancingScript-Regular.ttf') format('ttf');
@@ -8,17 +9,17 @@
 // $search-header-font: 'Dancing Script';
 
 .header-container {
-  background-image: linear-gradient( 135deg, #9f05ff69 10%, #fd5e086b 100%);
+  background-image: linear-gradient( 135deg, #9f05ff69 10%, #fd5e086b 100%); // todo move to var
   border-radius: 0 0 75% 75% / 70%;
 
 }
 
 .header-text {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Dancing Script', cursive; //todo move to var??
 	font-size: 50px;
   margin-bottom: 30px;
   font-weight: 400;
-  text-shadow: 1px 1px 1px #333;
-  color: #FFF;
+  text-shadow: 1px 1px 1px #333; //todo move to var
+  color: #FFF; //todo move to var
   text-align: center;
 }
