--- a/src/styles/components/_search-box.scss
+++ b/src/styles/components/_search-box.scss
@@ -6,7 +6,7 @@
 .artist-input {
   position: relative;
   font-size: 1.5em;
-  background: linear-gradient(21deg, #10abff, #1beabd); //todo move color to var
+  background: linear-gradient(21deg, $search-background-first, $search-background-second);
   padding: 3px;
   display: inline-block;
   border-radius: 9999em;
@@ -27,7 +27,7 @@
 input {
   font-family: inherit;
   line-height: inherit;
-  color: #2e3750; //todo move color to var
+  color: $input-color;
   min-width: 12em;
   font-family: sans-serif;
   font-size: 100%;
@@ -35,5 +35,5 @@ input {
 }
 
 ::placeholder {
-  color: #cbd0d5; //todo move color to var
+  color: $placeholder-color;
 }
