--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,25 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet'); //todo move to typography
-
-//todo remove??
-// @font-face {
-//   font-family: 'Dancing Script', cursive;
-//   src: url('../abstracts/dancing-script/DancingScript-Regular.ttf') format('ttf');
-// }
-
-// $search-header-font: 'Dancing Script';
-
 .header-container {
-  background-image: linear-gradient( 135deg, #9f05ff69 10%, #fd5e086b 100%); // todo move to var
+  background-image: linear-gradient( 135deg, $header-background-first 10%, $header-background-second 100%);
   border-radius: 0 0 75% 75% / 70%;
-
 }
 
 .header-text {
-  font-family: 'Dancing Script', cursive; //todo move to var??
+  font-family: $header-font, cursive;
 	font-size: 50px;
   margin-bottom: 30px;
   font-weight: 400;
-  text-shadow: 1px 1px 1px #333; //todo move to var
-  color: #FFF; //todo move to var
+  text-shadow: 1px 1px 1px $shadow-color;
+  color: $header-text-color;
   text-align: center;
 }
