changed header / aritst name fonts

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,6 +9,6 @@ $header-background-first: #9f05ff69;
 $header-background-second: #fd5e086b;
 $shadow-color: #333;
 $header-text-color: #FFF;
-$header-font: 'Dancing Script';
+$header-font: 'Playfair Display';
 
-$item-font: 'Cormorant Upright';
+$item-font: 'Chivo';
