--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet');
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Upright:600');
+@import url('https://fonts.googleapis.com/css?family=Chivo:400');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i');
