--- a/src/styles/components/_artists-list.scss
+++ b/src/styles/components/_artists-list.scss
@@ -12,7 +12,8 @@
 }
 
 .artists-list__item-figure {
-  display: table;
+  display: flex;
+  flex-direction: column;
   font-family: $item-font, cursive;
   font-size: 13px;
   font-weight: 400;
@@ -24,7 +25,6 @@
 }
 
 .artists-list__item-caption {
-  display: table-caption;
-  caption-side: bottom;
   text-align: center;
+  padding-top: 3px;
 }
