cr fixes: search-box.jsx refactor, css cleanup, added flexbox, readme up

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,7 +4,7 @@
 }
 
 .header-text {
-  font-family: $header-font, cursive;
+  font-family: $header-font;
 	font-size: 50px;
   margin-bottom: 30px;
   font-weight: 400;
