--- a/src/styles/components/_artists-list.scss
+++ b/src/styles/components/_artists-list.scss
@@ -14,7 +14,7 @@
 .artists-list__item-figure {
   display: flex;
   flex-direction: column;
-  font-family: $item-font, cursive;
+  font-family: $item-font;
   font-size: 13px;
   font-weight: 400;
 }
