--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -5,7 +5,7 @@
 
 .header-text {
   font-family: $header-font;
-	font-size: 50px;
+	font-size: 3.5em;
   margin-bottom: 30px;
   font-weight: 400;
   text-shadow: 1px 1px 1px $shadow-color;
