--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import 'components/_artists-list.scss';
 @import 'components/_search-box.scss';
+@import 'components/_artist-info.scss';
 
 @import '/layout/_header.scss';
 
