--- a/src/styles/components/_artist-info.scss
+++ b/src/styles/components/_artist-info.scss
@@ -27,25 +27,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-template-areas: "one two""three four";
 }
 
-.ai__genre-one {
-  grid-area: one;
+.ai__genre {
   background-color: yellow;
-}
-
-.ai__genre-two {
-  grid-area: two;
-  background-color: brown;
-}
-
-.ai__genre-three {
-  grid-area: three;
-  background-color: teal;
-}
-
-.ai__genre-four {
-  grid-area: four;
-  background-color: burlywood;
 }
