--- a/src/styles/components/_artists-list.scss
+++ b/src/styles/components/_artists-list.scss
@@ -7,6 +7,7 @@
   display: inline-flex;
   vertical-align: top;
   margin: 30px;
+  margin-bottom: 10px;
   border: solid thin $border-color;
   padding: 5px;
   max-width: 162px;
