--- a/src/styles/components/_search-box.scss
+++ b/src/styles/components/_search-box.scss
@@ -1,4 +1,4 @@
-.search-box__input-container {
+.sb__input-container {
   width: 60%;
   margin: auto;
   font-size: 1.5em;
@@ -8,7 +8,7 @@
   border-radius: 9999em;
 }
 
-.search-box__artist-input {
+.sb__artist-input {
   color: $input-color;
   min-width: 12em;
   font-family: sans-serif;
