--- a/src/styles/components/_artists-list.scss
+++ b/src/styles/components/_artists-list.scss
@@ -19,6 +19,14 @@
   font-size: 13px;
   font-weight: 400;
   flex: 0;
+  transition: transform 0.5s, opacity 0.5s;
+  opacity: 0.9;
+}
+
+.al__item-figure:hover {
+  cursor: pointer;
+  opacity: 1;
+  transform: scale(0.95);
 }
 
 .al__item-image {
