introduced react router, added ele that disappears on outside click, css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import 'abstracts/_variables.scss';
 
+@import 'base/_links.scss';
 @import 'base/_typography.scss';
 
+@import 'components/_album-song-list.scss';
 @import 'components/_artist-album.scss';
 @import 'components/_artist-albums.scss';
 @import 'components/_artist-info-container.scss';
