added song component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'components/_artist-info.scss';
 @import 'components/_artists-list.scss';
 @import 'components/_search-box.scss';
+@import 'components/_song.scss';
 
 @import '/layout/_header.scss';
 
