--- a/src/styles/components/_album-song-list.scss
+++ b/src/styles/components/_album-song-list.scss
@@ -1,6 +1,6 @@
 .asl__container {
-  width: 300px;
-  height: 300px;
+  // width: 300px;
+  // height: 300px;
   z-index: 10;
   background-color: #3f3f3f;
   position: absolute;
@@ -8,4 +8,5 @@
   left: 50%;
   transform: translateX(-50%);
   position: fixed;
+  list-style: none;
 }
