added song, album-songs-container, song-player components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import 'base/_typography.scss';
 
 @import 'components/_album-song-list.scss';
+@import 'components/_album-songs-container.scss';
 @import 'components/_artist-album.scss';
 @import 'components/_artist-albums.scss';
 @import 'components/_artist-info-container.scss';
