--- a/src/styles/components/_album-song-list.scss
+++ b/src/styles/components/_album-song-list.scss
@@ -1,12 +1,13 @@
-.asl__container {
-  // width: 300px;
-  // height: 300px;
-  z-index: 10;
-  background-color: #3f3f3f;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translateX(-50%);
-  position: fixed;
-  list-style: none;
-}
+// currently commented out, moved to asc
+// .asl__container {
+//   // width: 300px;
+//   // height: 300px;
+//   z-index: 10;
+//   background-color: #3f3f3f;
+//   position: absolute;
+//   top: 25%;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   position: fixed;
+//   list-style: none;
+// }
