--- a/src/styles/components/_song.scss
+++ b/src/styles/components/_song.scss
@@ -1,9 +1,5 @@
 .s__list-item {
   display: flex;
   justify-content: space-between;
-  margin: 5px 10px;
-}
-
-.s__player {
-  height: 20px;
+  padding: 2px 4px;
 }
