added custom scrollbar to player

--- a/src/styles/components/_album-songs-container.scss
+++ b/src/styles/components/_album-songs-container.scss
@@ -12,6 +12,6 @@
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  // grid-template-rows: 1fr 1fr;
   grid-template-areas: "song-list song-info""song-list song-player"
 }
