--- a/src/styles/components/_album-song-list.scss
+++ b/src/styles/components/_album-song-list.scss
@@ -1,7 +1,7 @@
 // currently commented out, moved to asc
 .asl__container {
 //   // width: 300px;
-  height: 200px;
+  height: 260px;
   overflow: auto;
   grid-area: song-list;
 //   z-index: 10;
@@ -17,3 +17,25 @@
 .asl__container li:nth-child(2n) {
   background: white;
 }
+
+ .asl__container::-webkit-scrollbar-track
+ {
+   -webkit-box-shadow: inset 0 0 12px rgba(0,0,0,0.2);
+   box-shadow: inset 0 0 12px rgba(0,0,0,0.2);
+   border-radius: 10px;
+   background-color: #F5F5F5;
+ }
+ 
+ .asl__container::-webkit-scrollbar
+ {
+   width: 6px;
+   background-color: #F5F5F5;
+ }
+ 
+ .asl__container::-webkit-scrollbar-thumb
+ {
+   border-radius: 10px;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+   box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+   background-color: rgb(155, 21, 148);
+ }
