--- a/src/styles/components/_album-song-list.scss
+++ b/src/styles/components/_album-song-list.scss
@@ -1,9 +1,10 @@
 // currently commented out, moved to asc
 .asl__container {
 //   // width: 300px;
-  height: 260px;
+  height: 280px;
   overflow: auto;
   grid-area: song-list;
+  max-width: 300px;
 //   z-index: 10;
 //   background-color: #3f3f3f;
 //   position: absolute;
@@ -37,5 +38,5 @@
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-   background-color: rgb(155, 21, 148);
+   background-color: #9F0D9F;
  }
