--- a/src/styles/components/_album-songs-container.scss
+++ b/src/styles/components/_album-songs-container.scss
@@ -11,7 +11,7 @@
   list-style: none;
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 300px 1fr;
   // grid-template-rows: 1fr 1fr;
   grid-template-areas: "song-list song-info""song-list song-player"
 }
