--- a/src/styles/components/_song-info.scss
+++ b/src/styles/components/_song-info.scss
@@ -1,3 +1,8 @@
 .si__container {
   grid-area: song-info;
 }
+
+.si__container > .VictoryContainer > svg {
+  //ugh
+  height: min-content !important;
+}
