changed colour base

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,14 +1,19 @@
+$background: #031634;
+$lighter-background: #033649;
+
 $border-color: #c0c0c0;
 
 $search-background-first: #10abff;
 $search-background-second: #1beabd;
 $input-color: #2e3750;
 $placeholder-color: #cbd0d5;
+$input-background-color: #E8DDCB;
 
-$header-background-first: #9f05ff69;
-$header-background-second: #fd5e086b;
+$header-background-first: #033649;
+$header-background-second: #CDB380;
 $shadow-color: #333;
-$header-text-color: #FFF;
+$header-text-color: #E8DDCB;
 $header-font: 'Playfair Display';
 
 $item-font: 'Chivo';
+$font-color: #E8DDCB;
