--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -5,7 +5,18 @@
   font-family: $item-font;
 }
 
+body {
+  background-color: $background;
+}
+
 .results {
   width: 95%;
   margin: auto;
 }
+
+
+// #E8DDCB
+// #CDB380
+// #036564
+// #033649
+// #031634
