added field-name Albums

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,5 +1,7 @@
 $background: #031634;
 $lighter-background: #033649;
+// needs better name lol
+$even-lighter-background: #036564;
 
 $border-color: #c0c0c0;
 
@@ -9,11 +11,10 @@ $input-color: #2e3750;
 $placeholder-color: #cbd0d5;
 $input-background-color: #E8DDCB;
 
-$header-background-first: #033649;
-$header-background-second: #CDB380;
 $shadow-color: #333;
 $header-text-color: #E8DDCB;
 $header-font: 'Playfair Display';
 
 $item-font: 'Chivo';
 $font-color: #E8DDCB;
+$darker-font: #CDB380;
