--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import 'abstracts/_variables.scss';
 
+@import 'base/_field-name.scss';
 @import 'base/_links.scss';
 @import 'base/_typography.scss';
 
