--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,5 +1,5 @@
 .header-container {
-  background-image: linear-gradient( 135deg, $header-background-first 10%, $header-background-second 100%);
+  background-image: linear-gradient( 135deg, $lighter-background 10%, $darker-font 100%);
   border-radius: 0 0 75% 75% / 70%;
 }
 
