applied similar style to the rest of listed items

--- a/src/styles/components/_artist-album.scss
+++ b/src/styles/components/_artist-album.scss
@@ -10,6 +10,7 @@
   border: solid thin $border-color;
   padding: 5px;
   max-width: 87px;
+  background-color: $lighter-background;
 }
 
 .aa__item-figure {
