--- a/src/styles/components/_artist-info.scss
+++ b/src/styles/components/_artist-info.scss
@@ -9,14 +9,18 @@
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-areas: "name name""popularity followers""genres genres""genres genres";
   // text-align: center;
-  padding-top: 10px;
-  padding-left: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-color: $lighter-background;
+  opacity: 0.9;
+  border-radius: 4em;
 }
 
 .ai__name {
   grid-area: name;
   font-size: 1.8em;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .ai__popularity {
@@ -36,6 +40,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  text-align: center;
 }
 
 .ai__genre {
