added: songs displayed = faded bckgrnd / events disabled

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 
 @import 'components/_album-song-list.scss';
 @import 'components/_album-songs-container.scss';
+@import 'components/_app.scss';
 @import 'components/_artist-album.scss';
 @import 'components/_artist-albums.scss';
 @import 'components/_artist-info-container.scss';
