song player changes: colors, hover, labels, slider

--- a/src/styles/components/_song.scss
+++ b/src/styles/components/_song.scss
@@ -3,3 +3,10 @@
   justify-content: space-between;
   padding: 2px 4px;
 }
+
+.asl__container .s__list-item:hover,
+.asl__container .s__list-item:active {
+  background-color: $background;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
