--- a/src/styles/components/_album-song-list.scss
+++ b/src/styles/components/_album-song-list.scss
@@ -16,7 +16,7 @@
 }
 
 .asl__container li:nth-child(2n) {
-  background: white;
+  background: $even-lighter-background;
 }
 
  .asl__container::-webkit-scrollbar-track
@@ -38,5 +38,5 @@
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-   background-color: #9F0D9F;
+   background-color: tomato;
  }
