--- a/src/styles/components/_album-songs-container.scss
+++ b/src/styles/components/_album-songs-container.scss
@@ -2,14 +2,14 @@
   // width: 300px;
   // height: 300px;
   z-index: 10;
-  background-color: #3f3f3f;
+  background-color: $lighter-background;
   position: absolute;
   top: 25%;
   left: 50%;
   transform: translateX(-50%);
   position: fixed;
   list-style: none;
-
+  color: $darker-font;
   display: grid;
   grid-template-columns: 300px 1fr;
   // grid-template-rows: 1fr 1fr;
