--- a/src/styles/components/_search-box.scss
+++ b/src/styles/components/_search-box.scss
@@ -10,7 +10,7 @@
 
 .sb__artist-input {
   color: $input-color;
-  min-width: 12em;
+  // min-width: 12em; removed for mobile
   font-family: sans-serif;
   font-size: 100%;
   width: 100%;
