--- a/src/styles/components/_album-songs-container.scss
+++ b/src/styles/components/_album-songs-container.scss
@@ -15,3 +15,19 @@
   // grid-template-rows: 1fr 1fr;
   grid-template-areas: "song-list song-info""song-list song-player"
 }
+
+@media (min-width: 360px) and (max-width: 480px) {
+  .asc__container {
+    display: block;
+    top: 5%;
+    max-width: 280px;
+  }
+}
+
+@media (max-width: 360px) {
+  .asc__container {
+    display: block;
+    top: 2%;
+    max-width: 200px;
+  }
+}
