--- a/src/styles/components/_song-player.scss
+++ b/src/styles/components/_song-player.scss
@@ -12,3 +12,11 @@
 .sp__song-name {
   display: block;
 }
+
+@media (min-width: 360px) and (max-width: 480px) {
+  max-width: 260px;
+}
+
+@media (max-width: 360px) {
+  max-width: 180px;
+}
