--- a/src/styles/components/_song-player.scss
+++ b/src/styles/components/_song-player.scss
@@ -14,9 +14,13 @@
 }
 
 @media (min-width: 360px) and (max-width: 480px) {
-  max-width: 260px;
+  .sp__player {
+    max-width: 260px;
+  }
 }
 
 @media (max-width: 360px) {
-  max-width: 180px;
+  .sp__player {
+    max-width: 180px;
+  }
 }
