--- a/src/styles/components/_artist-info.scss
+++ b/src/styles/components/_artist-info.scss
@@ -73,8 +73,8 @@
     text-align: left;
     grid-area: genres;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
   }
 }
 
@@ -98,8 +98,8 @@
     text-align: left;
     grid-area: genres;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
   }
 
   .ai__genre {
