--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -12,3 +12,9 @@
   color: $header-text-color;
   text-align: center;
 }
+
+@media (max-width: 480px) {
+  .header-text {
+    font-size: 2em;
+  }
+}
