--- a/src/styles/components/_artist-album.scss
+++ b/src/styles/components/_artist-album.scss
@@ -34,7 +34,13 @@
   width: 75px;
 }
 
+.aa__album-year {
+  text-align: right;
+  font-size: 0.8em;
+  color: $darker-font;
+  padding-top: 1px;
+}
+
 .aa__item-caption {
   text-align: center;
-  padding-top: 3px;
 }
