--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,19 +4,18 @@
 @import 'base/_links.scss';
 @import 'base/_typography.scss';
 
-@import 'components/_album-song-list.scss';
-@import 'components/_album-songs-container.scss';
-@import 'components/_app.scss';
-@import 'components/_artist-album.scss';
-@import 'components/_artist-albums.scss';
-@import 'components/_artist-info-container.scss';
-@import 'components/_artist-info.scss';
-@import 'components/_artists-list.scss';
-@import 'components/_search-box.scss';
-@import 'components/_song-info.scss';
-@import 'components/_song-player.scss';
-@import 'components/_song.scss';
-
-@import '/layout/_header.scss';
+@import '../components/app/_app.scss';
+@import '../components/app/header/_header.scss';
+@import '../components/app/searchbox/_search-box.scss';
+@import '../components/app/albumsongscontainer/_album-songs-container.scss';
+@import '../components/app/albumsongscontainer/songinfo/_song-info.scss';
+@import '../components/app/albumsongscontainer/songplayer/_song-player.scss';
+@import '../components/app/albumsongscontainer/albumsonglist/_album-song-list.scss';
+@import '../components/app/albumsongscontainer/albumsonglist/song/_song.scss';
+@import '../components/app/artistscontainer/artistslist/_artists-list.scss';
+@import '../components/app/artistscontainer/artistinfocontainer/_artist-info-container.scss';
+@import '../components/app/artistscontainer/artistinfocontainer/artistinfo/_artist-info.scss';
+@import '../components/app/artistscontainer/artistinfocontainer/artistalbums/_artist-albums.scss';
+@import '../components/app/artistscontainer/artistinfocontainer/artistalbums/artistalbum/_artist-album.scss';
 
 @import 'pages/_home.scss'
