--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $background: #031634;
 $lighter-background: #033649;
-// needs better name lol
 $even-lighter-background: #036564;
+$faded-background: #000000;
 
 $border-color: #c0c0c0;
 
@@ -18,3 +18,6 @@ $header-font: 'Playfair Display';
 $item-font: 'Chivo';
 $font-color: #E8DDCB;
 $darker-font: #CDB380;
+
+$scroll-background: #F5F5F5;
+$scroll-color: #ff6347;
