cr fix: server, Fragment, names, css dedup, refs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'base/_field-name.scss';
 @import 'base/_links.scss';
 @import 'base/_typography.scss';
+@import 'base/_item-w-cover.scss';
 
 @import '../components/app/_app.scss';
 @import '../components/app/header/_header.scss';
