--- a/src/components/app/artistscontainer/artistinfocontainer/artistalbums/artistalbum/_artist-album.scss
+++ b/src/components/app/artistscontainer/artistinfocontainer/artistalbums/artistalbum/_artist-album.scss
@@ -1,33 +1,22 @@
-.al__list {
-  list-style: none;
-  text-align: center;
-}
+// .al__list {
+//   list-style: none;
+//   text-align: center;
+// }
 
 .aa__list-item {
-  display: inline-flex;
-  vertical-align: top;
   margin: 10px;
-  border: solid thin $border-color;
-  padding: 5px;
   max-width: 87px;
-  background-color: $lighter-background;
 }
 
 .aa__item-figure {
-  display: flex;
-  flex-direction: column;
   font-size: 0.7em;
-  font-weight: 400;
-  flex: 0;
-  transition: transform 0.5s, opacity 0.5s;
-  opacity: 0.9;
 }
 
-.aa__item-figure:hover {
-  cursor: pointer;
-  opacity: 1;
-  transform: scale(0.95);
-}
+// .aa__item-figure:hover {
+//   cursor: pointer;
+//   opacity: 1;
+//   transform: scale(0.95);
+// }
 
 .aa__item-image {
   height: 75px;
@@ -41,6 +30,6 @@
   padding-top: 1px;
 }
 
-.aa__item-caption {
-  text-align: center;
-}
+// .aa__item-caption {
+//   text-align: center;
+// }
