--- a/src/components/app/artistscontainer/artistslist/_artists-list.scss
+++ b/src/components/app/artistscontainer/artistslist/_artists-list.scss
@@ -1,34 +1,23 @@
-.al__list {
-  list-style: none;
-  text-align: center;
-}
+// .al__list {
+//   list-style: none;
+//   text-align: center;
+// }
 
 .al__list-item {
-  display: inline-flex;
-  vertical-align: top;
   margin: 30px;
   margin-bottom: 10px;
-  border: solid thin $border-color;
-  padding: 5px;
   max-width: 162px;
-  background-color: $lighter-background;
 }
 
 .al__item-figure {
-  display: flex;
-  flex-direction: column;
   font-size: 13px;
-  font-weight: 400;
-  flex: 0;
-  transition: transform 0.5s, opacity 0.5s;
-  opacity: 0.9;
 }
 
-.al__item-figure:hover {
-  cursor: pointer;
-  opacity: 1;
-  transform: scale(0.95);
-}
+// .al__item-figure:hover {
+//   cursor: pointer;
+//   opacity: 1;
+//   transform: scale(0.95);
+// }
 
 .al__item-image {
   height: 150px;
@@ -36,7 +25,6 @@
 }
 
 .al__item-caption {
-  text-align: center;
   padding-top: 3px;
   color: $font-color;
 }
